# mcp-system-monitor

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  ai-agent-config.json  deploy.sh  docker-compose.yml  install.sh  test_server.sh
demo_output/: system_summary.txt
examples/: client.rs  demo_visualization.rs
scripts/: run_demo.sh
src/: http_server.rs  lib.rs  main.rs  server.rs  stdio_server.rs
src/system_monitor/: core.rs  helpers.rs  linux.rs  mod.rs
src/types/: constants.rs  mod.rs  protocol.rs  system.rs
tests/: integration_test.rs
