[package]
name = "mcp-system-monitor"
version = "0.1.0"
edition = "2021"
authors = ["Thinh Nguyen <hello@boringlab.info>"]
description = "A comprehensive system monitoring library for Linux servers with MCP protocol and HTTP REST API support"
license = "MIT"
repository = "https://github.com/hungtrungthinh/mcp-system-monitor"
keywords = ["monitoring", "system", "linux", "mcp", "api", "metrics"]
categories = ["api-bindings", "monitoring", "web-programming"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
sysinfo = "0.30"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
axum = "0.7"
tower = "0.4"
num_cpus = "1.0"
reqwest = { version = "0.11", features = ["json"], optional = true }
plotters = "0.3"
rand = "0.8"
futures = "0.3"
tokio-stream = "0.1"

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "client"
required-features = ["client"]

[[example]]
name = "demo_visualization"

[features]
default = []
client = ["reqwest"] 